add css files, js files and html files

--- a/css/style.css
+++ b/css/style.css
@@ -757,4 +757,4 @@ input[type="checkbox"] {
 /* Button Group */
 .button-group {
     display: flex;
-    justify-content: flex-en
+    justify-content: flex-en}
